Gradient fix? on safari + padding fix on mobile mode

--- a/front/mikroagresszi-wiki/src/app/components/category/category.component.scss
+++ b/front/mikroagresszi-wiki/src/app/components/category/category.component.scss
@@ -88,7 +88,9 @@
           height: 5rem;
 
           .content-fade-out {
-            background: linear-gradient(180deg, transparent 0%, map-get(mat.$gray-palette, 200) 100%);
+            background: -moz-linear-gradient(top, transparent 0%, map-get(mat.$gray-palette, 200) 100%); /* FF3.6-15 */
+            background: -webkit-linear-gradient(top, transparent 0%, map-get(mat.$gray-palette, 200) 100%); /* Chrome10-25,Safari5.1-6 */
+            background: linear-gradient(to bottom, transparent 0%, map-get(mat.$gray-palette, 200) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
             position: absolute;
             bottom: 0;
             height: 3rem;
