--- a/front/mikroagresszi-wiki/src/app/components/home/home.component.scss
+++ b/front/mikroagresszi-wiki/src/app/components/home/home.component.scss
@@ -83,6 +83,6 @@
   }
 
   .explain-card {
-    margin: 0 2rem;
+    padding: 0 2rem;
   }
 }
