--- a/front/mikroagresszi-wiki/src/app/components/sidebar/sidebar.component.scss
+++ b/front/mikroagresszi-wiki/src/app/components/sidebar/sidebar.component.scss
@@ -37,6 +37,7 @@
 
         .text {
           align-self: center;
+          color: black;
           font-size: .8rem;
           margin-left: .5rem;
         }
